implemented quiz.html

--- a/resources.html
+++ b/resources.html
@@ -102,9 +102,16 @@
     </div>
 
     </div>
+    <h2>
+      Are you alredy familiar with code? 
+    </h2>
+    <br/>
+    <p class="text">
+      Test your knowledge.
+    </p>
+    <div class="link-button">
+  <a href="./quiz.html" class="quiz">go to quiz</a>
 </div>
-
-<footer></footer>
-
+</div>
 </body>
 </html>
