updated css and js

--- a/resources.html
+++ b/resources.html
@@ -103,7 +103,7 @@
 
     </div>
     <h2>
-      Are you alredy familiar with code? 
+      Are you alredy familiar with HTML, CSS and JavaScript? 
     </h2>
     <br/>
     <p class="text">
