--- a/resources.html
+++ b/resources.html
@@ -14,21 +14,21 @@
     <title>Group 5</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#642AB6;">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Trailblazers</a>
-              <a class="nav-link" href="#">Career Path</a>
-              <a class="nav-link" href="#">Getting Started</a>
-              <a class="nav-link" href="#">Career Advice</a>
-              <a class="nav-link" href="#">About us</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#642AB6;">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link" href="./trailblazers.html">Trailblazers</a>
+          <a class="nav-link" href="./careerpaths.html">Career Path</a>
+          <a class="nav-link" href="./resources.html">Getting Started</a>
+          <a class="nav-link" href="./careeradvice.html">Career Advice</a>
+        </div>
+      </div>
+      </div>
     
       </nav>
     </div>
