updated the project to this git repository

--- a/quiz.html
+++ b/quiz.html
@@ -29,10 +29,10 @@
 					<input type="radio" name="q1" value="d" id="q1d"> d. &lt;img alt="MyImage", "image.gif"&gt;<br/>
 					
 					<h3>2. Which is the correct CSS syntax?</h3>
-					<input type="radio" name="q2" value="a" id="q2a"> a. body {color:black};<br/>
-					<input type="radio" name="q2" value="b" id="q2b"> b. {body:color:black;}<br/>
-					<input type="radio" name="q2" value="c" id="q2c"> c. {body:color=black;}<br/>
-					<input type="radio" name="q2" value="d" id="q2d"> d. body:color=black<br/>
+					<input type="radio" name="q2" value="a" id="q2a"> a. body { color: black; }<br/>
+					<input type="radio" name="q2" value="b" id="q2b"> b. { body: color: black; }<br/>
+					<input type="radio" name="q2" value="c" id="q2c"> c. { body: color= black; }<br/>
+					<input type="radio" name="q2" value="d" id="q2d"> d. body: color= black<br/>
 
 					<h3>3. Witch CSS property is used to change the text size?</h3>
 					<input type="radio" name="q3" value="a" id="q3a"> a. text-size;<br/>
@@ -43,8 +43,8 @@
 					<h3>4. What is the correct way to write a JavaScript array?</h3>
 					<input type="radio" name="q4" value="a" id="q4a"> a. let colors = { ("red"), ("green"), ("blue") }<br/>
 					<input type="radio" name="q4" value="b" id="q4b"> b. let colors = ["red", "green", "blue"]<br/>
-                    <input type="radio" name="q4" value="c" id="q4c"> b. let colors = (1:"red",2"green", 3"blue")<br/>
-                    <input type="radio" name="q4" value="d" id="q4d"> b. let colors = "red", "green:, "blue"<br/>
+                    <input type="radio" name="q4" value="c" id="q4c"> c. let colors = (1:"red",2"green", 3"blue")<br/>
+                    <input type="radio" name="q4" value="d" id="q4d"> d. let colors = "red", "green:, "blue"<br/>
 
 					<h3>5. How do you call a function named "myFunction"?</h3>
 					<input type="radio" name="q5" value="a" id="q5a"> a. call myFunction()<br/>
