--- a/resources.html
+++ b/resources.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Poppins:wght@200&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
 
-    <title>Group 5</title>
+
+    <title>Getting Started</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#642AB6;">
@@ -25,7 +25,8 @@
           <a class="nav-link" href="./trailblazers.html">Trailblazers</a>
           <a class="nav-link" href="./careerpaths.html">Career Path</a>
           <a class="nav-link" href="./resources.html">Getting Started</a>
-          <a class="nav-link" href="./careeradvice.html">Career Advice</a>
+          <a class="nav-link" href="./advice.html">Career Advice</a>
+          <a class="nav-link" href="./aboutus.html">About us</a>
         </div>
       </div>
       </div>
@@ -113,5 +114,11 @@
   <a href="./quiz.html" class="quiz">go to quiz</a>
 </div>
 </div>
+<footer>
+  <p class="footerLargeText">🟣 Team Amethyst 🟣<p>
+  <p class="footerNames">Elizabeth Chapman - Jessica Jevon - Judith Fressard <br />
+      Maria Beatriz - Carly Watson</p>
+  <p class="footerSmallText">Code First Girls Project - July 2021</p>
+</footer>
 </body>
 </html>
