--- a/quiz.html
+++ b/quiz.html
@@ -34,7 +34,7 @@
 					<input type="radio" name="q2" value="c" id="q2c"> c. { body: color= black; }<br/>
 					<input type="radio" name="q2" value="d" id="q2d"> d. body: color= black<br/>
 
-					<h3>3. Witch CSS property is used to change the text size?</h3>
+					<h3>3. Which CSS property is used to change the text size?</h3>
 					<input type="radio" name="q3" value="a" id="q3a"> a. text-size;<br/>
 					<input type="radio" name="q3" value="b" id="q3b"> b. font-style;<br/>
 					<input type="radio" name="q3" value="c" id="q3c"> c. text-style;<br/>
